--- a/BuscaCep/BuscaCep/MainPage.xaml
+++ b/BuscaCep/BuscaCep/MainPage.xaml
@@ -5,8 +5,9 @@
              x:Class="BuscaCep.MainPage">
 
     <StackLayout>
-        <Entry x:Name="txtCep" Placeholder="Informe o CEP" />
+        <Entry Text="{Binding CEP}" Placeholder="Informe o CEP" />
         <Button x:Name="btnBuscarCep" Text="Buscar" Clicked="BtnBuscarCep_Clicked"/>
+        <Label Text="{Binding CEP}" />
     </StackLayout>
 
 </ContentPage>
